@@ -23,6 +23,10 @@ Revision history for Net-XMPP2
            they can be registered to an ::Ext::Disco extension to display
            support for certain features.
          - xmpp_datetime_as_timestamp fixed w.r.t. UTC based timestamps.
+         - added possibility to override iq_xml events, and documented
+           how to overtake handling of message, presence and iq stanzas.
+         - added patch from Pedro Melo to give stanzas sent by a ::Component
+           the right namespace.
 
 0.3 Mon Jan 28 23:00:58 CET 2009
          - fixed a bug in disconnect error reporting.
